--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   progresso: ^0.3.0
   circle_nav_bar: ^2.0.1+1
   circular_progress_stack: ^0.0.3
+  msh_checkbox: ^2.0.1
 
 dev_dependencies:
   flutter_test:
