--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  easy_date_timeline: ^1.0.2
+  
   progresso: ^0.3.0
   circle_nav_bar: ^2.0.1+1
   circular_progress_stack: ^0.0.3
   msh_checkbox: ^2.0.1
+  sqflite: ^2.3.0
+  path: ^1.8.3
+  provider: ^6.1.1
+  bottom_sheet: ^4.0.0
+  fl_chart: ^0.66.0
 
 dev_dependencies:
   flutter_test:
