--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   provider: ^6.1.1
   bottom_sheet: ^4.0.0
   fl_chart: ^0.66.0
+  syncfusion_flutter_calendar: ^24.2.3
 
 dev_dependencies:
   flutter_test:
