--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   bottom_sheet: ^4.0.0
   fl_chart: ^0.66.0
   syncfusion_flutter_calendar: ^24.2.3
+  neon_circular_timer: ^0.0.7
 
 dev_dependencies:
   flutter_test:
