--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "task_app",
-    "short_name": "task_app",
+    "name": "daily_task",
+    "short_name": "daily_task",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
