--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "task_app" "\0"
+            VALUE "FileDescription", "daily_task" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "task_app" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "task_app.exe" "\0"
-            VALUE "ProductName", "task_app" "\0"
+            VALUE "InternalName", "daily_task" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
+            VALUE "OriginalFilename", "daily_task.exe" "\0"
+            VALUE "ProductName", "daily_task" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
