--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_slidable: ^3.1.0
   image_picker: ^1.0.7
   dashed_circular_progress_bar: ^0.0.6
+  animated_text_kit: ^4.2.2
 
 dev_dependencies:
   flutter_test:
